Fix spacing issue between filter buttons, ensuring a horizontal gap of 10px. Also, resolved sizing problem of filter buttons in mobile version

--- a/css/sections/recherches-and-filtres.css
+++ b/css/sections/recherches-and-filtres.css
@@ -224,7 +224,7 @@
   }
 
   .filtres__boutonsItem {
-    flex: 0 0 calc(50% - 20px); /* Deux items par ligne en mode mobile */
+    flex: 0 0 calc(50% - 5px); /* Deux items par ligne en mode mobile */
     margin: 0px;
     font-size: 14px;
     background-color: white;
